tests/machine/x/c/map_membership.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_membership.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_membership.c:59:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   59 |   map_int_bool_put(&_t1, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_membership.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:60:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   60 |   map_int_bool_put(&_t1, "b", 2);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_membership.c:38:51: note: expected ‘int’ but argument is of type ‘char *’
   38 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:61:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   61 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_membership.c:62:22: error: expected ‘)’ before ‘in’
   62 |   printf("%s\n", ("a" in m) ? "true" : "false");
      |                  ~   ^~~
      |                      )
/workspace/mochi/tests/machine/x/c/map_membership.c:63:22: error: expected ‘)’ before ‘in’
   63 |   printf("%s\n", ("c" in m) ? "true" : "false");
      |                  ~   ^~~
      |                      )

   1: #include <stdio.h>
